test/files/pos/t12554b/s_2.scala

//> using options -Yimports:java.lang,scala,scala.Predef,p,q,r.Z

object Test extends App {
  println(X)
  println(Y)
  println(new C)
  println(greeting)
}
