test/files/neg/t12513/predefer_2.scala
//> using options -Yimports:p.MyPredef,scala.Predef,scala

package p {
  object Test extends App {
    println((x,y))
  }
}
package q {
  object Test extends App {
    println((x,y))
  }
}
